=== 0.5 ===
2011-09-20  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/config.py (BaseConfig.__init__):
    Modified volatile_config, which was previously unused.

* mozharness/base/config.py (BaseConfig._create_config_parser):
    Renamed only_actions to actions.

* mozharness/base/config.py (BaseConfig.parse_args):
    Deleted any volatile_config keys from self._config.
    Updated the comments.
    Allow for default_actions, actions, add_actions, and no_actions to be
    set in the config file, which should allow for more cross-team utility.

    Add the volatile_config to self._config['volatile_config'], which will
    add it to the dump_config but won't actually be used (I think). The
    alternative was to
        a) possibly get rid of initial_config_file,
        b) change parse_config_file to return (config, path-to-config),
        c) copy config_file (and initial_config_file if not removed in (a))
           into upload_dir so we can duplicate this later.
    I think it's cleaner this way, but it remains to be seen.

2011-09-19  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/errors.py (BaseErrorList):
    Added.

* mozharness/base/python.py (VirtualenvMixin.create_virtualenv):
    Added virtualenv_error_list. Not sure how helpful this is, but it
    works at catching warnings/errors.

* mozharness/base/script.py (ShellMixin.run_command):
    Changed halt_on_failure behavior.  Was dying if num_errors; now will
    only die if num_errors *and* return_type == 'num_errors'.

2011-08-23  Aki Sasaki  <aki@mozilla.com>
* Started talosrunner work.
  (Stopped updating CHANGES due to only touching new files.)

=== 0.4 ===
2011-07-24  Aki Sasaki  <aki@mozilla.com>
* scripts/mozmill_updates.py (MozmillUpdate.run_mozmill):
    Added more substrs to MozmillErrorList.

2011-07-21  Aki Sasaki  <aki@mozilla.com>
* scripts/mozmill_updates.py (MozmillUpdate.run_mozmill):
    Created report_json in work_dir, then copied to upload_dir at the end.
